--- a/web/construction_contact_platform.html
+++ b/web/construction_contact_platform.html
@@ -57,6 +57,14 @@
 				<br>Bernat Busc&agrave; Safont-Tria, Xavier de Blas Foix and Gabriel Daza Sobrino.
 				<br>Original instruction by <b>Dr. Alberto Garc&iacute;a-Fojeda</b>.
 
+				<br><br>
+				<hr width="100%">
+				<font size="3"><b>Note:</b></font>
+					<br>we recommend building <a href="construction_modular_circuit_platform.html">rigid printed circuit board platform</a>
+					<br>instead of this rods platform.
+				<hr width="100%">
+
+
 				<h5>Material and tools</h5>
 
 				<p><img src="images/plataforma_contactos_material.jpg">
