--- a/web/construction_contact_platform_es.html
+++ b/web/construction_contact_platform_es.html
@@ -56,6 +56,13 @@
 
 				<br>Bernat Busc&agrave; Safont-Tria, Xavier de Blas Foix and Gabriel Daza Sobrino.
 				<br>Instrucciones originales del <b>Dr. Alberto Garc&iacute;a-Fojeda</b>, profesor de Biomec&aacute;nica del INEFC de Lleida.
+				
+				<br><br>
+				<hr width="100%">
+				<font size="3"><b>Atención:</b></font>
+				<br>Recomendamos construir la <a href="construction_modular_circuit_platform_es.html">plataforma de contactos modular de circuito impreso</a>
+				<br>en lugar de la plataforma descrita en la presente página.
+				<hr width="100%">
 
 				<h5>Materiales y herramientas</h5>
 				<p><img src="images/plataforma_contactos_material.jpg">
