--- a/web/documents.html
+++ b/web/documents.html
@@ -156,7 +156,7 @@
 														<ul id="nospace">
 																		<li>Connect Photocells to Chronopic</li>
 																		<li>Build your contact platform:
-																		<br>&nbsp;&nbsp;&nbsp;Modular printed circuit
+																		<br>&nbsp;&nbsp;&nbsp;Modular printed circuit (recommended)
 																		<br>&nbsp;&nbsp;&nbsp;Steel rods</li>
 																		<li>Construction of a push button</li>
 																		<li>Chronopic build</li>
