--- a/web/documents_es.html
+++ b/web/documents_es.html
@@ -156,7 +156,7 @@
 														<ul id="nospace">
 																		<li>Conectar fotocélulas a Chronopic</li>
 																		<li>Construcción de plataforma de contactos:
-																		<br>&nbsp;&nbsp;&nbsp;Modular de circuito impreso
+																		<br>&nbsp;&nbsp;&nbsp;Modular de circuito impreso (recomendada)
 																		<br>&nbsp;&nbsp;&nbsp;Varillas de acero</li>
 																		<li>Construcción de pulsador</li>
 																		<li>Construcción de Chronopic</li>
