--- a/web/hardware_store.html
+++ b/web/hardware_store.html
@@ -81,21 +81,19 @@
 					<table>
 						<tr><th colspan="2"><h3>Circuit board jump platform</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
-						<tr valign="top"><td rowspan="2">
+						<tr valign="top"><td>
 								<img src="images/chronojump_circuit_board_platform_small.png" alt="Chronojump circuit board platform">
 								</td><td width="100%">
-								High quality platform. Resistant to flexion (fiberglass) and with good conductivity. All circuit area produces contact. Opossite to old rods platforms, here here are no false contacts or problems produced by the toes being placed between rods at raising or falling. Sizes:
+								High quality platform. Resistant to flexion (fiberglass) and with good conductivity. All circuit area produces contact. Oposite to old rods platforms, here there are no false contacts or problems produced by the toes being placed between rods at jumping or falling. <br><br>
+								Sizes:
 								<ul>
-									<li>Din A2
-									<li>Din A3
-									<li>Din A4
+									<li>Din A2: 75€
+									<li>Din A3: 55€
+									<li>Din A4: 45€
 									<li>(You can ask for other sizes)
 								</ul>
 								</td></tr>
-								<tr><td valign="bottom">
-								Price will be published and product available at April 4th. Thanks for waiting.
-							</td>
-					</tr></table>
+					</table>
 				</div>
 				<div id="platform-flexible">
 					<table>
@@ -137,11 +135,60 @@
 							</td>
 					</tr></table>
 				</div>
+				<div id="typical_uses">
+					<table>
+						<tr><th colspan="2"><h3>Typical uses</h3></th></tr>
+						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr valign="top"><td>
+								<img src="images/typical_uses.png" alt="Typical uses">
+								</td><td width="100%">
+								These are typical uses of Chronojump equipment. Download software to see all included tests and how to define new tests.
+								<br>
+								<ul id="nospace">
+									<li><b>(A) Bosco jumps and other jumps</b>
+									<br>1 Chronopic
+									<br>1 contact platform DIN-A2
+									<li><b>(B,C) Runs between photocells</b>
+									<br>1 Chronopic
+									<br>2 Photocells, or 
+									<br>1 contact platform DIN-A4 and 1 photocell
+								</ul>
+							</td>
+					</tr></table>
+				</div>
+				<div id="howto_buy">
+					<table>
+						<tr><th colspan="2"><h3>How to buy</h3></th></tr>
+						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr valign="top"><td width="50%">
+								<ul id="nospace">
+									<li>On <b>Chronopics</b>, remember to choose between Firmwares: 50ms (jumps in contact platform) or 10ms (run between photocells). <a href="http://forum.chronojump.org/showthread.php?tid=20">User can change Firmware</a>, but sometimes is not easy.
+									<li>Tell us if you need <b>USB cable</b> to connect Chronopic to computer. The cable is standard USB Bidirectional with <a href="http://chronojump.org/images/USB_types_2.jpg">a male connector in each side (A&nbsp;Type-B&nbsp;Type)</a>.
+								</ul>
+
+								</td><td width="50%">
+								<ul id="nospace">
+									<li>Tell us if you need <b>RCA cable</b> (Male-Male) to connect Chronopic with platform/s, photocell/s.
+									<li>All produts are sold at it cost + taxes + shipping costs.
+									<li>Payment will be by credit/debit card or by Western Union.
+									<li>Shippings will be on mondays.
+								</ul>
+							</td>
+						</tr>
+						<tr valign="top"><td colspan="2">
+								<ul id="nospace">
+									<li>To buy, please write <b>hardware@chronojump.org</b> including your full postal address.
+								</ul>
+						</td></tr>
+					</table>
+				</div>
 			</div>
-			<div id="note">
-				<center>
-				<img src="images/shopping.png" align="bottom">&nbsp;<a href="http://forum.chronojump.org/showthread.php?tid=51">How to buy</a>
-				</center>
+			<div id="noteStore">
+				<table border="0"><tr><td>
+							<img src="images/typical_uses_small.png" align="bottom">&nbsp;<a href="hardware_store.html#typical_uses">Typical uses</a>
+							</td><td>
+							<img src="images/shopping.png" align="bottom">&nbsp;<a href="hardware_store.html#howto_buy">How to buy</a>
+				</td></tr></table>
 			</div>
 		</div>
 	</body>
