--- a/web/hardware_store_es.html
+++ b/web/hardware_store_es.html
@@ -82,21 +82,19 @@
 					<table>
 						<tr><th colspan="2"><h3>Plataforma de saltos circuito impreso</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
-						<tr valign="top"><td rowspan="2">
+						<tr valign="top"><td>
 								<img src="images/chronojump_circuit_board_platform_small.png" alt="Chronojump circuit board platform">
 								</td><td width="100%">
-								Plataforma de alta calidad resistente a la flexión (fibra de vidrio) y con buena conductividad. A diferencia de las plataformas de varillas, la plataforma rígida produce contacto en toda su área evitando falsos contactos o caídas en zonas muertas. Tamaños:
+								Plataforma de alta calidad resistente a la flexión (fibra de vidrio) y con buena conductividad. A diferencia de las plataformas de varillas, la plataforma rígida produce contacto en toda su área evitando falsos contactos o caídas en zonas muertas. <br><br>
+								Tamaños:
 								<ul>
-									<li>Din A2
-									<li>Din A3
-									<li>Din A4
+									<li>Din A2: 75€
+									<li>Din A3: 55€
+									<li>Din A4: 45€
 									<li>(Puede pedir otros tamaños)
 								</ul>
 								</td></tr>
-								<tr><td valign="bottom">
-								El precio se publicará el 4 de abril. Esa misma fecha, el producto estará disponible. Gracias por la espera.
-							</td>
-					</tr></table>
+					</table>
 				</div>
 				<div id="platform-flexible">
 					<table>
@@ -138,11 +136,60 @@
 							</td>
 					</tr></table>
 				</div>
+				<div id="typical_uses">
+					<table>
+						<tr><th colspan="2"><h3>Ejemplos de uso</h3></th></tr>
+						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr valign="top"><td>
+								<img src="images/typical_uses.png" alt="Typical uses">
+								</td><td width="100%">
+								Se muestran los usos más frecuentes del hardware de Chronojump. en el software podrá ver los tests incluídos y cómo definir nuevos tests.
+								<br>
+								<ul id="nospace">
+									<li><b>(A) Test de Bosco y otros saltos</b>
+									<br>1 Chronopic
+									<br>1 platforma de contactos DIN-A2
+									<li><b>(B,C) Carreras entre fotocélulas</b>
+									<br>1 Chronopic
+									<br>2 fotocélulas, o
+									<br>1 platforma de contactos DIN-A4 y 1 fotocélula
+								</ul>
+							</td>
+					</tr></table>
+				</div>
+				<div id="howto_buy">
+					<table>
+						<tr><th colspan="2"><h3>Cómo comprar</h3></th></tr>
+						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr valign="top"><td width="50%">
+								<ul id="nospace">
+									<li>En los <b>Chronopics</b>, recuerde elegir Firmware: 50ms (saltos en plataforma) o 10ms (carreras entre fotocélulas). <a href="http://foro.chronojump.org/showthread.php?tid=19">El usuario puede cambiar el Firmware</a>, pero es un poco complejo.
+									<li>Indíquenos si necesita un <b>cable USB</b> para conectar el Chronopic al ordenador. Es un cable USB Bidireccional estándard con <a href="http://chronojump.org/images/USB_types_2.jpg">un conector macho en cada lado (Tipo&nbsp;A-Tipo&nbsp;B)</a>.
+								</ul>
+
+								</td><td width="50%">
+								<ul id="nospace">
+									<li>Indíquenos si necesita un <b>cable RCA</b> (macho-macho) para conectar el Chronopic a platforma/s, fotocélula/s.
+									<li>Los productos a su coste + IVA + gastos de envío contrarrembolso.
+									<li>El pago se realiza por tarjeta de crédito/débito o Western Union.
+									<li>Los envíos se realizan cada lunes.
+								</ul>
+							</td>
+						</tr>
+						<tr valign="top"><td colspan="2">
+								<ul id="nospace">
+									<li>Para realizar el pedido escribid a <b>hardware@chronojump.org</b> incluyendo vuestra dirección postal completa.
+								</ul>
+						</td></tr>
+					</table>
+				</div>
 			</div>
-			<div id="note">
-				<center>
-				<img src="images/shopping.png" align="bottom">&nbsp;<a href="http://foro.chronojump.org/showthread.php?tid=58">Funcionamiento de la tienda</a>
-				</center>
+			<div id="noteStore">
+				<table border="0"><tr><td>
+							<img src="images/typical_uses_small.png" align="bottom">&nbsp;<a href="hardware_store_es.html#typical_uses">Ejemplos de uso</a>
+							</td><td>
+							<img src="images/shopping.png" align="bottom">&nbsp;<a href="hardware_store_es.html#howto_buy">Cómo comprar</a>
+				</td></tr></table>
 			</div>
 		</div>
 	</body>
