--- a/web/hardware_store_es.html
+++ b/web/hardware_store_es.html
@@ -170,7 +170,7 @@
 								</td><td width="50%">
 								<ul id="nospace">
 									<li>Indíquenos si necesita un <b>cable RCA</b> (macho-macho) para conectar el Chronopic a platforma/s, fotocélula/s.
-									<li>Los productos a su coste + IVA + gastos de envío contrarrembolso.
+									<li>Los productos se venden a su coste + IVA + gastos de envío contrarrembolso.
 									<li>El pago se realiza por tarjeta de crédito/débito o Western Union.
 									<li>Los envíos se realizan cada lunes.
 								</ul>
