--- a/web/hardware_store.html
+++ b/web/hardware_store.html
@@ -73,7 +73,7 @@
 								You can <a href="http://forum.chronojump.org/showthread.php?tid=20">change the firmware</a> anytime.
 								</td></tr>
 								<tr><td valign="bottom">
-								Price: 37€ + taxes.
+								Price: 43€.
 							</td>
 					</tr></table>
 				</div>
@@ -169,7 +169,7 @@
 								</td><td width="50%">
 								<ul id="nospace">
 									<li>Tell us if you need <b>RCA cable</b> (Male-Male) to connect Chronopic with platform/s, photocell/s.
-									<li>All produts are sold at it cost + taxes + shipping costs.
+									<li>All produts are sold at it cost + shipping costs.
 									<li>Payment will be by credit/debit card or by Western Union.
 									<li>Shippings will be on mondays.
 								</ul>
