website: added photocells price

--- a/web/hardware_store.html
+++ b/web/hardware_store.html
@@ -131,7 +131,7 @@
 								</ul>
 								</td></tr>
 								<tr><td valign="bottom">
-								Price: still unknown.
+								Price: 69€.
 							</td>
 					</tr></table>
 				</div>
