--- a/web/hardware_store_es.html
+++ b/web/hardware_store_es.html
@@ -132,7 +132,7 @@
 								</ul>
 								</td></tr>
 								<tr><td valign="bottom">
-								Precio: por determinar.
+								Precio: 69€.
 							</td>
 					</tr></table>
 				</div>
