website photocell updates

--- a/web/hardware_store.html
+++ b/web/hardware_store.html
@@ -131,7 +131,7 @@
 								</ul>
 								</td></tr>
 								<tr><td valign="bottom">
-								Price: 69€.
+								Price: 1 Photocell includes emitter and receptor, and costs 69€.
 							</td>
 					</tr></table>
 				</div>
