--- a/web/hardware_store_es.html
+++ b/web/hardware_store_es.html
@@ -132,7 +132,7 @@
 								</ul>
 								</td></tr>
 								<tr><td valign="bottom">
-								Precio: 69€.
+								Precio: 1 fotocélula incluye emisor y receptor, y su coste es 69€.
 							</td>
 					</tr></table>
 				</div>
