website: Added flexible platform

--- a/web/hardware_store.html
+++ b/web/hardware_store.html
@@ -51,7 +51,7 @@
 					<ul>
 						<li><a href="#chronopic3"><img src="images/chronopic3.png" alt="Chronopic3"></a></li>
 						<li><a href="#platform-rigid"><img src="images/chronojump_circuit_board_platform_small.png" alt="Platform rigid"></a></li>
-						<li><a href="#platform-flexible"><img src="images/pending2.png" alt="Platform flexible"></a></li>
+						<li><a href="#platform-flexible"><img src="images/chronojump_flexible_platform_small.jpg" alt="Platform flexible"></a></li>
 						<li><a href="#photocells"><img src="images/velleman_connecting5.jpg" alt="Photocells"></a></li>
 					</ul>
 				</div>
@@ -99,20 +99,16 @@
 					<table>
 						<tr><th colspan="2"><h3>Flexible jump platform</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
-						<tr valign="top"><td rowspan="2">
-								<img src="images/pending2.png" alt="Chronojump flexible platform">
+						<tr valign="top"><td>
+								<img src="images/chronojump_flexible_platform_small.jpg" alt="Chronojump flexible platform">
 								</td><td width="100%">
 									Flexible platform with high contact area. Best balance between price, quality, transport and storage.
 								<br><br>Sizes:
 								<ul>
-									<li>Din A2
-									<li>Din A3
-									<li>(You can ask for other sizes)
+									<li>Din A1: 60€
+									<li>Din A2: 45€
 								</ul>
 								</td></tr>
-								<tr><td valign="bottom">
-								Price: still unknown.
-							</td>
 					</tr></table>
 				</div>
 				<div id="photocells">
