--- a/web/hardware_store_es.html
+++ b/web/hardware_store_es.html
@@ -51,7 +51,7 @@
 					<ul>
 						<li><a href="#chronopic3"><img src="images/chronopic3.png" alt="Chronopic3"></a></li>
 						<li><a href="#platform-rigid"><img src="images/chronojump_circuit_board_platform_small.png" alt="Platform rigid"></a></li>
-						<li><a href="#platform-flexible"><img src="images/pending3.png" alt="Platform flexible"></a></li>
+						<li><a href="#platform-flexible"><img src="images/chronojump_flexible_platform_small.jpg" alt="Platform flexible"></a></li>
 						<li><a href="#photocells"><img src="images/velleman_connecting5.jpg" alt="Photocells"></a></li>
 					</ul>
 				</div>
@@ -101,18 +101,15 @@
 						<tr><th colspan="2"><h3>Platforma de saltos flexible</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
 						<tr valign="top"><td rowspan="2">
-								<img src="images/pending3.png" alt="Chronojump flexible platform">
+								<img src="images/chronojump_flexible_platform_small.jpg" alt="Chronojump flexible platform">
 								</td><td width="100%">
 									Plataforma flexible con elevada superfície de contacto. Muy buena relación entre precio, calidad, capacidad de transporte y almacenamiento.
 								<br><br>Tamaños:
 								<ul>
-									<li>Din A2
-									<li>Din A3
-									<li>(Puede pedir otros tamaños)
+									<li>Din A1: 60€
+									<li>Din A2: 45€
 								</ul>
 								</td></tr>
-								<tr><td valign="bottom">
-								Precio: por determinar.
 							</td>
 					</tr></table>
 				</div>
