website: cables info

--- a/web/hardware_store.html
+++ b/web/hardware_store.html
@@ -144,11 +144,33 @@
 									<li><b>(A) Bosco jumps and other jumps</b>
 									<br>1 Chronopic
 									<br>1 contact platform DIN-A2
-									<li><b>(B,C) Runs between photocells</b>
+									<li><b>(B,C) Runs</b>
 									<br>1 Chronopic
 									<br>2 Photocells, or 
 									<br>1 contact platform DIN-A4 and 1 photocell
 								</ul>
+							</td>
+					</tr></table>
+				</div>
+				<div id="cables">
+					<table>
+						<tr><th colspan="2"><h3>Cables</h3></th></tr>
+						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr valign="top"><td rowspan="2">
+								<img src="images/cables.png" alt="Cables">
+								</td><td width="100%">
+								Cable using on three different scenarios.
+								<br>
+								<ul id="nospace">
+									<li><span style="background-color: #6c76ab"><font color="#f7ff19"><b>Yellow</b>:</font></span> USB cable. This cable is standard USB Bidirectional <a href="http://chronojump.org/images/USB_types_2.jpg">male&nbsp;A-male&nbsp;B</a>. Price:&nbsp;1€.
+									<li><font color="#191cff"><b>Blue</b></font>: cables and RCA adapter. RCA adapter converts two cables in one:
+									<br><font color="#191cff"><b>am</b></font>: <b>a</b>dapter <b>m</b>ale, it connects to Chronopic.
+									<br><font color="#191cff"><b>af</b></font>: <b>a</b>dapter <b>f</b>emale, it connects to a cable.
+									<br>Prices: RCA Cable 2.5m:&nbsp;3€; 5m:&nbsp;4€; 10m:&nbsp;8€; 25m:&nbsp;16€; 50m:&nbsp;30€. RCA-Adapter:&nbsp;2€.
+								</ul>
+								</td></tr>
+								<tr><td valign="bottom">
+										<a href="images/cables_big.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
 							</td>
 					</tr></table>
 				</div>
@@ -159,19 +181,19 @@
 						<tr valign="top"><td width="50%">
 								<ul id="nospace">
 									<li>On <b>Chronopics</b>, remember to choose between Firmwares: 50ms (jumps in contact platform) or 10ms (run between photocells). <a href="http://forum.chronojump.org/showthread.php?tid=20">User can change Firmware</a>, but sometimes is not easy.
-									<li>Tell us if you need <b>USB cable</b> to connect Chronopic to computer. The cable is standard USB Bidirectional with <a href="http://chronojump.org/images/USB_types_2.jpg">a male connector in each side (A&nbsp;Type-B&nbsp;Type)</a>.
+									<li>Tell us if you need <b>USB cable</b> to connect Chronopic to computer (see&nbsp;<a href="hardware_store.html#cables">cables</a>).
+									<li>Tell us if you need <b>RCA cables</b> (see&nbsp;<a href="hardware_store.html#cables">cables</a>).
 								</ul>
 
 								</td><td width="50%">
 								<ul id="nospace">
-									<li>Tell us if you need <b>RCA cable</b> (Male-Male) to connect Chronopic with platform/s, photocell/s.
 									<li>All produts are sold at it cost + shipping costs.
 									<li>Payment will be by credit/debit card or by Western Union.
 									<li>Shippings will be on mondays.
 								</ul>
 							</td>
 						</tr>
-						<tr valign="top"><td colspan="2">
+						<tr valign="bottom"><td colspan="2"><br>
 								<ul id="nospace">
 									<li>To buy, please write <b>hardware@chronojump.org</b> including your full postal address.
 								</ul>
