--- a/web/hardware_store_es.html
+++ b/web/hardware_store_es.html
@@ -146,11 +146,33 @@
 									<li><b>(A) Test de Bosco y otros saltos</b>
 									<br>1 Chronopic
 									<br>1 platforma de contactos DIN-A2
-									<li><b>(B,C) Carreras entre fotocélulas</b>
+									<li><b>(B,C) Carreras</b>
 									<br>1 Chronopic
 									<br>2 fotocélulas, o
 									<br>1 platforma de contactos DIN-A4 y 1 fotocélula
 								</ul>
+							</td>
+					</tr></table>
+				</div>
+				<div id="cables">
+					<table>
+						<tr><th colspan="2"><h3>Cables</h3></th></tr>
+						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr valign="top"><td rowspan="2">
+								<img src="images/cables.png" alt="Cables">
+								</td><td width="100%">
+								Uso de los cables en tres situaciones distintas.
+								<br>
+								<ul id="nospace">
+									<li><span style="background-color: #6c76ab"><font color="#f7ff19"><b>Amarillo</b></font></span> cable USB. Es un cable USB Bidireccional estándard <a href="http://chronojump.org/images/USB_types_2.jpg">macho&nbsp;A-macho&nbsp;B</a>. Precio:&nbsp;1€.
+									<li><font color="#191cff"><b>Azul</b></font> cables y adaptador RCA. El adaptador RCA convierte dos cables en uno:
+									<br><font color="#191cff"><b>am</b></font>: <b>a</b>daptador <b>m</b>acho, se conecta al Chronopic.
+									<br><font color="#191cff"><b>af</b></font>: <b>a</b>daptador (<b>f</b>emale), se conecta a un cable.
+									<br>Precios: Cables RCA 2,5m:&nbsp;3€; 5m:&nbsp;4€; 10m:&nbsp;8€; 25m:&nbsp;16€; 50m:&nbsp;30€. Adaptador-RCA:&nbsp;2€.
+								</ul>
+								</td></tr>
+								<tr><td valign="bottom">
+										<a href="images/cables_big.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
 							</td>
 					</tr></table>
 				</div>
@@ -161,21 +183,21 @@
 						<tr valign="top"><td width="50%">
 								<ul id="nospace">
 									<li>En los <b>Chronopics</b>, recuerde elegir Firmware: 50ms (saltos en plataforma) o 10ms (carreras entre fotocélulas). <a href="http://foro.chronojump.org/showthread.php?tid=19">El usuario puede cambiar el Firmware</a>, pero es un poco complejo.
-									<li>Indíquenos si necesita un <b>cable USB</b> para conectar el Chronopic al ordenador. Es un cable USB Bidireccional estándard con <a href="http://chronojump.org/images/USB_types_2.jpg">un conector macho en cada lado (Tipo&nbsp;A-Tipo&nbsp;B)</a>.
+									<li>Indíquenos si necesita un <b>cable USB</b> para conectar el Chronopic al ordenador (ver&nbsp;<a href="hardware_store_es.html#cables">cables</a>).
+									<li>Indíquenos si necesita <b>cables RCA</b> (ver&nbsp;<a href="hardware_store_es.html#cables">cables</a>).
 								</ul>
 
 								</td><td width="50%">
 								<ul id="nospace">
-									<li>Indíquenos si necesita un <b>cable RCA</b> (macho-macho) para conectar el Chronopic a platforma/s, fotocélula/s.
-									<li>Los productos se venden a su coste + gastos de envío contrarrembolso.
-									<li>El pago se realiza por tarjeta de crédito/débito o Western Union.
+									<li>Los productos se venden a su coste + gastos de envío. 
+									<li>En España el pago es contrarrembolso, en otros países se usa contrarrembolso, tarjeta de crédito/débito o Western Union.
 									<li>Los envíos se realizan cada lunes.
 								</ul>
 							</td>
 						</tr>
-						<tr valign="top"><td colspan="2">
+						<tr valign="bottom"><td colspan="2"><br>
 								<ul id="nospace">
-									<li>Para realizar el pedido escribid a <b>hardware@chronojump.org</b> incluyendo vuestra dirección postal completa.
+									<li>Para realizar el pedido escribid a <b>hardware@chronojump.org</b> incluyendo dirección postal completa.
 								</ul>
 						</td></tr>
 					</table>
