--- a/web/hardware_store.html
+++ b/web/hardware_store.html
@@ -132,7 +132,7 @@
 					</tr></table>
 				</div>
 				<div id="typical_uses">
-					<table>
+					<table id="vert_space">
 						<tr><th colspan="2"><h3>Typical uses</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
 						<tr valign="top"><td>
@@ -146,9 +146,9 @@
 									<br>1 contact platform DIN-A2
 									<li><b>(B,C) Runs</b>
 									<br>1 Chronopic
-									<br>2 Photocells, or 
-									<br>1 contact platform DIN-A4 and 1 photocell
+									<br>2 Photocells, or 1 contact platform DIN-A4 and 1 photocell.
 								</ul>
+								We recommend to put photocells at the height of the head.
 							</td>
 					</tr></table>
 				</div>
