--- a/web/hardware_store_es.html
+++ b/web/hardware_store_es.html
@@ -134,7 +134,7 @@
 					</tr></table>
 				</div>
 				<div id="typical_uses">
-					<table>
+					<table id="vert_space">
 						<tr><th colspan="2"><h3>Ejemplos de uso</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
 						<tr valign="top"><td>
@@ -148,9 +148,9 @@
 									<br>1 platforma de contactos DIN-A2
 									<li><b>(B,C) Carreras</b>
 									<br>1 Chronopic
-									<br>2 fotocélulas, o
-									<br>1 platforma de contactos DIN-A4 y 1 fotocélula
+									<br>2 fotocélulas, o 1 platforma de contactos DIN-A4 y 1 fotocélula
 								</ul>
+								Recomendamos situar las fotocélulas a la altura de la cabeza.
 							</td>
 					</tr></table>
 				</div>
