Added schema to website

--- a/web/index.html
+++ b/web/index.html
@@ -51,6 +51,13 @@
 			<br>Chronojump is used by trainers, teachers and students.
 		</td>
 	</tr>
+	<tr>
+		<td colspan="2">
+			<br><a href="images/chronojump-boscosystem-schema.png"><img src="images/chronojump-boscosystem-schema_small.png"></a>
+		</td><td colspan="3">
+			<br>Click on the image to understand Chronojump&nbsp;Boscosystem technologies.
+		</td>
+	</tr>
 </table>
 		</div> <!--dalt-->
 
