--- a/web/index_es.html
+++ b/web/index_es.html
@@ -50,6 +50,13 @@
 			<br>Chronojump es usado por entrenadores, profesores y estudiantes.
 		</td>
 	</tr>
+	<tr>
+		<td colspan="2">
+			<br><a href="images/chronojump-boscosystem-schema_es.png"><img src="images/chronojump-boscosystem-schema_small_es.png"></a>
+		</td><td colspan="3">
+			<br>Clic en la imagen para entender las tecnologías asociadas a Chronojump&nbsp;Boscosystem.
+		</td>
+	</tr>
 </table>
 		</div> <!--dalt-->
 
