--- a/web/index.html
+++ b/web/index.html
@@ -16,9 +16,9 @@
 		<div id="dalt">
 
 <center>
-<br><table border ="0" width = "500">
+<br><table border ="0" width = "600">
 	<tr valign="center" align="right">
-		<td colspan="5">
+		<td colspan="6">
 			<table width="100%" border=0 cellpadding="0" cellspacing="0">
 				<tr valign="bottom">
 				<td valign="bottom" align="left">
@@ -29,13 +29,46 @@
 			</table>
 		</td>
 	</tr>
-	<tr><td colspan="5">&nbsp;</td></tr>
-	<tr valign="bottom" align="center">
-		<td width="20%"><a href="software.html"><img src="images/nuvola-media-optical.png" alt="Software" border="0"></a></td>
-		<td width="20%"><a href="hardware_store.html"><img src="images/nuvola-emblem-package.png" alt="Hardware store" border="0"></a></td>
-		<td width="20%"><a href="documents.html"><img src="images/nuvola-folder.png" alt="Documents" border="0"></a></td>
-		<td width="20%"><a href="http://forum.chronojump.org"><img src="images/nuvola-gaim_send-im.png" alt="Forum" border="0"></a></td>
-		<td width="20%"><a href="server.html"><img src="images/nuvola-applications-internet.png" alt="Server" border="0"></a></td>
+	<tr><td colspan="6">&nbsp;</td></tr>
+	<tr height=50 valign="top" align="center">
+		<td width="85"><a href="software.html"><img src="images/nuvola-media-optical.png" alt="Software" border="0"></a></td>
+		<td width="85"><a href="hardware_store.html"><img src="images/nuvola-emblem-package.png" alt="Hardware store" border="0"></a></td>
+		<td width="85"><a href="documents.html"><img src="images/nuvola-folder.png" alt="Documents" border="0"></a></td>
+		<td width="85"><a href="http://forum.chronojump.org"><img src="images/nuvola-gaim_send-im.png" alt="Forum" border="0"></a></td>
+		<td width="85"><a href="server.html"><img src="images/nuvola-applications-internet.png" alt="Server" border="0"></a></td>
+		<td width="200" align="right" rowspan="4">
+<script src="twitter_widget.js"></script>
+<script>
+new TWTR.Widget({
+  version: 2,
+  type: 'profile',
+  rpp: 0,
+  interval: 6000,
+  width: 160,
+  height: 200,
+  theme: {
+    shell: {
+      background: '#ffffff',
+      color: '#333333'
+    },
+    tweets: {
+      background: '#ffffff',
+      color: '#000000',
+      links: '#6c76ab'
+    }
+  },
+  features: {
+    scrollbar: true,
+    loop: true,
+    live: true,
+    hashtags: true,
+    timestamp: true,
+    avatars: false,
+    behavior: 'all'
+  }
+}).render().setUser('boscosystem').start();
+</script>
+		</td>
 	</tr>
 	<tr valign="top" align="center">
 		<td><font size="2">Software</font></td>
@@ -44,18 +77,18 @@
 		<td><font size="2">Forum</font></td>
 		<td><font size="2">Server</font></td>
 	</tr>
-	<tr>
+	<tr valign="top">
 		<td colspan="5">
 			<br>
-			Chronojump is an open hardware, free software complete system for measurement, management and statistics of sport short-time tests.
-			<br>Chronojump is used by trainers, teachers and students.
+			Chronojump Boscosystem measures, and manages sport short-time tests.
+			<br>Chronojump is a free solution used by trainers, teachers and students.
 		</td>
 	</tr>
-	<tr>
+	<tr valign="top">
 		<td colspan="2">
 			<br><a href="images/chronojump-boscosystem-schema.png"><img src="images/chronojump-boscosystem-schema_small.png"></a>
 		</td><td colspan="3">
-			<br>Click on the image to understand Chronojump&nbsp;Boscosystem technologies.
+			<br>Click to understand Chronojump&nbsp;Boscosystem technologies.
 		</td>
 	</tr>
 </table>
