--- a/web/index_es.html
+++ b/web/index_es.html
@@ -16,9 +16,9 @@
 		<div id="dalt">
 
 <center>
-<br><table border ="0" width = "500">
+<br><table border ="0" width = "630">
 	<tr valign="center" align="right">
-		<td colspan="5">
+		<td colspan="6">
 			<table width="100%" border=0 cellpadding="0" cellspacing="0">
 				<tr valign="bottom">
 				<td valign="bottom" align="left">
@@ -29,13 +29,46 @@
 			</table>
 		</td>
 	</tr>
-	<tr><td colspan="5">&nbsp;</td></tr>
-	<tr valign="bottom" align="center">
-		<td width="20%"><a href="software_es.html"><img src="images/nuvola-media-optical.png" alt="Software" border="0"></a></td>
-		<td width="20%"><a href="hardware_store_es.html"><img src="images/nuvola-emblem-package.png" alt="Hardware store" border="0"></a></td>
-		<td width="20%"><a href="documents_es.html"><img src="images/nuvola-folder.png" alt="Documents" border="0"></a></td>
-		<td width="20%"><a href="http://foro.chronojump.org"><img src="images/nuvola-gaim_send-im.png" alt="Forum" border="0"></a></td>
-		<td width="20%"><a href="server_es.html"><img src="images/nuvola-applications-internet.png" alt="Server" border="0"></a></td>
+	<tr><td colspan="6">&nbsp;</td></tr>
+	<tr height="50" valign="top" align="center">
+		<td width="85"><a href="software_es.html"><img src="images/nuvola-media-optical.png" alt="Software" border="0"></a></td>
+		<td width="85"><a href="hardware_store_es.html"><img src="images/nuvola-emblem-package.png" alt="Hardware store" border="0"></a></td>
+		<td width="85"><a href="documents_es.html"><img src="images/nuvola-folder.png" alt="Documents" border="0"></a></td>
+		<td width="85"><a href="http://foro.chronojump.org"><img src="images/nuvola-gaim_send-im.png" alt="Forum" border="0"></a></td>
+		<td width="85"><a href="server_es.html"><img src="images/nuvola-applications-internet.png" alt="Server" border="0"></a></td>
+		<td width="230" align="right" rowspan="4">
+<script src="twitter_widget.js"></script>
+<script>
+new TWTR.Widget({
+  version: 2,
+  type: 'profile',
+  rpp: 0,
+  interval: 6000,
+  width: 190,
+  height: 200,
+  theme: {
+    shell: {
+      background: '#ffffff',
+      color: '#333333'
+    },
+    tweets: {
+      background: '#ffffff',
+      color: '#000000',
+      links: '#6c76ab'
+    }
+  },
+  features: {
+    scrollbar: true,
+    loop: true,
+    live: true,
+    hashtags: true,
+    timestamp: true,
+    avatars: false,
+    behavior: 'all'
+  }
+}).render().setUser('boscosystem_es').start();
+</script>
+		</td>
 	</tr>
 	<tr valign="top" align="center">
 		<td><font size="2">Software</font></td>
@@ -46,15 +79,15 @@
 	</tr>
 	<tr>
 		<td colspan="5">
-			<br>Chronojump es un completo sistema de hardware abierto y software libre para la medida, gestión y estadísticas de tests deportivos de corta duración.
-			<br>Chronojump es usado por entrenadores, profesores y estudiantes.
+			<br>Chronojump Boscosystem mide y gestiona tests deportivos de corta duración.
+			<br>Chronojump es una solución libre usada por entrenadores, profesores y estudiantes.
 		</td>
 	</tr>
 	<tr>
 		<td colspan="2">
 			<br><a href="images/chronojump-boscosystem-schema_es.png"><img src="images/chronojump-boscosystem-schema_small_es.png"></a>
 		</td><td colspan="3">
-			<br>Clic en la imagen para entender las tecnologías asociadas a Chronojump&nbsp;Boscosystem.
+			<br>Clic para entender las tecnologías asociadas a Chronojump&nbsp;Boscosystem.
 		</td>
 	</tr>
 </table>
