--- a/web/documents_es.html
+++ b/web/documents_es.html
@@ -134,7 +134,7 @@
 											<ul id="lang">
 															<li id="lang"><a href="docs/chronojump_manual_es.pdf">es</a></li>
 															<li id="lang"><a href="faq_software.html">en</a>, <a href="faq_software_es.html">es</a></li>
-															<li id="lang"><a href="posters.html#06-08">en</a>, <a href="posters_es.html#06-08">es</a></li>
+															<li id="lang"><a href="posters.html#06-08">en</a></li>
 															<li id="lang"><a href="software_more.html">en</a>, <a href="software_more_es.html">es</a></li>
 															<li id="lang"><a href="http://git.gnome.org/cgit/chronojump/">en</a></li>
 															<li id="lang"><a href="http://svn.gnome.org/svn/chronojump/trunk/glossary/chronojump_glossary_for_translators.html">en</a></li>
@@ -161,19 +161,21 @@
 																		<li>Construcción de pulsador</li>
 																		<li>Construcción de Chronopic</li>
 																		<li>Velocidad de barra usando Chronojump (póster)</li>
+																		<li>Velocidad de barra usando Chronojump (artículo)</li>
 														</ul>
 							</td>
 							<td>
 											<ul id="lang">
 															<li id="lang"><a href="faq_hardware.html">en</a>, <a href="faq_hardware_es.html">es</a></li>
-															<li id="lang"><a href="posters.html#seattle_09">en</a>, <a href="posters_es.html#seattle_09">es</a></li>
+															<li id="lang"><a href="posters.html#seattle_09">en</a></li>
 															<li id="lang"><a href="photocells_velleman.html">en</a>, <a href="photocells_velleman_es.html">es</a></li>
 															<li id="lang">&nbsp;</li>
 															<li id="lang"><a href="construction_modular_circuit_platform.html">en</a>, <a href="construction_modular_circuit_platform_es.html">es</a></li>
 															<li id="lang"><a href="construction_contact_platform.html">en</a>, <a href="construction_contact_platform_es.html">es</a></li>
 															<li id="lang"><a href="construction_push_button.html">en</a>, <a href="construction_push_button_es.html">es</a></li>
 															<li id="lang"><a href="chronopic_build.html">en</a>, <a href="chronopic_build_es.html">es</a></li>
-															<li id="lang"><a href="posters.html#06-08">en</a>, <a href="posters_es.html#06-08">es</a></li>
+															<li id="lang"><a href="posters.html#06-08">en</a></li>
+															<li id="lang"><a href="http://www.efdeportes.com/efd141/nuevo-dispositivo-para-medir-la-velocidad.htm">es</a></li>
 											</ul>
 							</td>
 							<td id="video" width="35%">
