website: Added wikipedia article

--- a/web/documents_es.html
+++ b/web/documents_es.html
@@ -120,10 +120,11 @@
 						<tr valign="top">
 							<td id="documents">
 											<ul id="space">
+															<li>Chronojump Wikipedia</li>
 															<li>Chronojump Manual</li>
-															<li>Software FAQ</li>
 											</ul>
 											<ul id="nospace">
+															<li>Software FAQ</li>
 															<li>Proyecto Chronojump (póster)</li>
 															<li>Autores, licencia, premio</li>
 															<li>Código fuente de Chronojump</li>
@@ -132,6 +133,7 @@
 							</td>
 							<td>
 											<ul id="lang">
+															<li id="lang"><a href="http://es.wikipedia.org/wiki/Chronojump_Boscosystem">es</a></li>
 															<li id="lang"><a href="docs/chronojump_manual_es.pdf">es</a></li>
 															<li id="lang"><a href="faq_software.html">en</a>, <a href="faq_software_es.html">es</a></li>
 															<li id="lang"><a href="posters.html#06-08">en</a></li>
