website: link to chronopic 2

--- a/web/chronopic_build.html
+++ b/web/chronopic_build.html
@@ -91,6 +91,8 @@
 
 				Maybe you are interested also on <a href="http://git.gnome.org/cgit/chronojump/">Chronopic source code</a><br><br>
 
+				If you cannot produce Chronopic 3, maybe you are interested in Chronopic <b>2</b>. Here you have all <a href="http://www.chronopic.com.ar/">information on Chronopic <b>2</b></a>, also this forum post maybe useful: <a href="http://foro.chronojump.org/showthread.php?tid=19&pid=231#pid231">Juanfer explanation on Chronopic 2</a> (spanish).<br><br>
+
 				More information at <a href="faq_hardware.html">Hardware FAQ</a>, and at <a href="http://forum.chronojump.org/forumdisplay.php?fid=3">Chronopic on Forum</a>.
 
 
