--- a/web/chronopic_build_es.html
+++ b/web/chronopic_build_es.html
@@ -90,6 +90,7 @@
 
 
 				Quizás esté interesado también en el <a href="http://git.gnome.org/cgit/chronojump/">Código fuente de Chronopic</a><br><br>
+				Si no puede producir la Chronopic 3, quizás esté interesado en la Chronopic <b>2</b>. Aquí tiene toda la <a href="http://www.chronopic.com.ar/">información sobre Chronopic <b>2</b></a>, también puede interesarle este comentario en el foro: <a href="http://foro.chronojump.org/showthread.php?tid=19&pid=231#pid231">explicación de Juanfer sobre Chronopic 2</a>.<br><br>
 
 				Más información en las <a href="faq_hardware_es.html">FAQ hardware</a> (preguntas frequentes sobre hardware), y en <a href="http://foro.chronojump.org/forumdisplay.php?fid=3">apartado de Chronopic del Foro</a>.
 
